# WeVolunteer

./: .gitignore  README.md  pyproject.toml
WeVolunteer/: .coveragerc  db.sqlite3  fly.toml  manage.py
WeVolunteer/WeVolunteer/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
WeVolunteer/core/: adapters.py  admin.py  forms.py  models.py  rules.py  urls.py  views.py
WeVolunteer/core/migrations/: 0001_initial.py  0002_event_organization.py  0003_alter_event_start_time.py  0004_event_event_descriptor_tags.py  0005_alter_event_event_descriptor_tags.py  0006_event_location_descriptor_tags_and_more.py  0007_remove_organization_contact_email_and_more.py  0008_alter_event_primary_contact_and_more.py  0009_organization_about_organization_website.py  0010_alter_organization_name.py  0011_alter_organization_website.py
WeVolunteer/core/templates/: about.html  event_details.html  event_form.html  events.html  organization_contact_form.html  organization_details.html  organization_form.html  organizations.html  test_page.html
WeVolunteer/core/templates/partials/: event_card.html  event_list.html  monthly_event_list.html  organization_card.html
WeVolunteer/core/templatetags/: dict_tags.py  enum_tags.py  event_tags.py
WeVolunteer/static/: core.css
WeVolunteer/templates/: base_head.html  nav_footer.html
WeVolunteer/templates/allauth/elements/: form.html  h1.html  h2.html  provider.html
WeVolunteer/templates/allauth/layouts/: base.html  entrance.html  (+1 more)
WeVolunteer/tests/: test_forms.py  test_models.py  test_rules.py  test_templatetags.py  test_utils.py  test_views.py
