[project]
name = "WeVolunteer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datastar>=0.0.8",
    "datastar-py>=0.5.0",
    "django>=5.2.3",
    "django-allauth[socialaccount]>=65.9.0",
    "django-template-partials>=24.4",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
]
